# retrosynthesis-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt  trees.json
.github/workflows/: deploy-to-azure.yml  push-to-docker-hub.yml
aizynthfinder/: aizynthfinder.py
aizynthfinder/context/: config.py
aizynthfinder/context/policy/: expansion_strategies.py  post_sm_grouping.py
aizynthfinder/interfaces/: aizynthcli.py
aizynthfinder/search/mcts/: node.py
sources/retrosynthesis/: routes.py  startup.py
sources/retrosynthesis/aizynthfinder/: aizynthfinder.py  reactiontree.py
sources/retrosynthesis/aizynthfinder/analysis/: __init__.py  routes.py  tree_analysis.py  utils.py
sources/retrosynthesis/aizynthfinder/chem/: __init__.py  mol.py  reaction.py  serialization.py
sources/retrosynthesis/aizynthfinder/context/: collection.py  config.py
sources/retrosynthesis/aizynthfinder/context/cost/: __init__.py  collection.py
sources/retrosynthesis/aizynthfinder/context/policy/: __init__.py  expansion_strategies.py  filter_strategies.py  policies.py
sources/retrosynthesis/aizynthfinder/interfaces/: aizynthcli.py
sources/retrosynthesis/aizynthfinder/search/: andor_trees.py
sources/retrosynthesis/aizynthfinder/utils/: image.py  logging.py  models.py  mongo.py
src/: app.py
src/aizynthfinder/: aizynthfinder.py
src/aizynthfinder/analysis/: tree_analysis.py
src/aizynthfinder/search/mcts/: state.py
src/aizynthfinder/utils/: image.py
src/sources/retrosynthesis/: classes.py  routes.py  startup.py  worker.py
(+11 files in other folders)
